Adding SelectedArtist component

--- a/src/Search/Search.css
+++ b/src/Search/Search.css
@@ -36,3 +36,9 @@ li {
 .selectedArtistsTitle > button {
   height: 25px;
 }
+
+.selectedArtistsList {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+}
